[package]
name = "kintoun"
version = "0.1.0"
authors = ["tehprofessor <servando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
clap = "~2.33"
once_cell = "~0.2.0"
pulldown-cmark = { version = "~ 0.5", feature = ["simd"] }
termcolor = "~ 1"
tui = "0.6"
termion = "1.5"
walkdir = "~2.2"
